--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'DMSans';
   src: local('DMSans'), url('./fonts/DM_Sans/DMSans-Regular.ttf') format('truetype');
+  font-display: swap;
 }
 
 body {
@@ -13,4 +14,11 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+* {
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
